--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,44 @@
-asn1crypto==0.24.0
-certifi==2019.6.16
-cffi==1.12.3
-chardet==3.0.4
-conda==4.7.10
-conda-package-handling==1.3.11
-cryptography==2.7
-idna==2.8
-libarchive-c==2.8
-numpy==1.21.6
-pandas==1.3.5
-pycosat==0.6.3
-pycparser==2.19
-pyOpenSSL==19.0.0
-PySocks==1.7.0
+appnope==0.1.3
+asttokens==2.4.1
+beautifulsoup4==4.12.2
+bs4==0.0.1
+certifi==2023.11.17
+charset-normalizer==3.3.2
+comm==0.2.0
+debugpy==1.8.0
+decorator==5.1.1
+et-xmlfile==1.1.0
+executing==2.0.1
+idna==3.6
+ipykernel==6.27.1
+ipython==8.19.0
+jedi==0.19.1
+jupyter_client==8.6.0
+jupyter_core==5.5.1
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.8
+numpy==1.26.2
+openpyxl==3.1.2
+packaging==23.2
+pandas==2.1.4
+parso==0.8.3
+pexpect==4.9.0
+platformdirs==4.1.0
+prompt-toolkit==3.0.43
+psutil==5.9.7
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
-requests==2.22.0
-ruamel-yaml==0.15.46
-six==1.12.0
-tqdm==4.32.1
-urllib3==1.24.2
+pyzmq==25.1.2
+requests==2.31.0
+six==1.16.0
+soupsieve==2.5
+stack-data==0.6.3
+tornado==6.4
+traitlets==5.14.0
+tzdata==2023.3
+urllib3==2.1.0
+vnstock==0.2.8.7
+wcwidth==0.2.12
