--- a/docker-hadoop/docker-compose.yml
+++ b/docker-hadoop/docker-compose.yml
@@ -15,11 +15,13 @@ services:
       - CLUSTER_NAME=test
     env_file:
       - ./hadoop.env
-
+      
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
     container_name: datanode
     restart: always
+    ports:
+      - 9864:9864
     volumes:
       - hadoop_datanode:/hadoop/dfs/data
     environment:
